# font-manager-cli

./: Cargo.toml  LICENSE  README.md  j
assets/: nerd.yaml
src/: command.rs  errors.rs  files.rs  main.rs  manager.rs  nerd.rs
src/files/: mod.rs  util.rs
