[package]
name = "font-manager"
description = "A simple utility to manage fonts on unix systems"
authors = [ "Eric Puentes <eric.david2333@gmail.com>" ]
version = "0.0.2"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ericpubu/font-manager-cli"
homepage = "https://github.com/ericpubu/font-manager-cli"

exclude = [
    "test-data/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
home = "0.5.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
reqwest = "0.11.5"
structopt = "0.3.23"
text_io = "0.1.9"
thiserror = "1.0"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "net"] }
zip = "0.5"

