[package]
name = "font-manager"
description = "A simple utility to manage fonts on linux systems"
authors = [ "Eric Puentes <eric.david2333@gmail.com>" ]
version = "0.0.3"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ericpubu/font-manager-cli"
homepage = "https://github.com/ericpubu/font-manager-cli"

exclude = [
    "test-data/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
home = "0.5.3"
log = "0.4.17"
pretty_env_logger = "0.4.0"
reqwest = "0.11.12"
clap = { version = "3.2.22", features = ["derive"] }
text_io = "0.1.12"
thiserror = "1.0"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "net"] }
zip = "0.6"

